--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'org.jsoup:jsoup:1.10.1'
     // picasso library
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:design:25.0.1'
 }
