--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddCityActivity" />
+        <activity android:name=".AddCityActivity"
+            android:theme="@style/NoToolbar"/>
         <activity android:name=".CityActivity"></activity>
     </application>
 
