--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,16 +19,25 @@ android {
     }
 }
 
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    repositories{
+        mavenCentral()
+    }
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //sliding panel lib
+    compile 'com.sothree.slidinguppanel:library:3.3.1'
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
-    // jsoup HTML parser library @ http://jsoup.org/
-    compile 'org.jsoup:jsoup:1.10.1'
     // picasso library
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
+    //horizontalCalendar
+    compile 'com.github.tibolte:agendacalendarview:1.0.4'
 }
