--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="itea.forecast">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,11 +17,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddCityActivity"
-            android:theme="@style/NoToolbar"/>
-        <activity android:name=".CityActivity"></activity>
+        <activity
+            android:name=".AddCityActivity"
+            android:theme="@style/NoToolbar" />
+        <activity
+            android:name=".CityActivity"
+            android:theme="@style/Transparent"></activity>
+        <activity android:name=".TabActivity"></activity>
+        <activity android:name=".CardsActivity"></activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
