--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
@@ -17,15 +20,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+repositories{
+    mavenCentral()
+    jcenter()
 }
 
 
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    repositories{
-        mavenCentral()
-    }
+
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -39,5 +50,5 @@ dependencies {
     compile 'com.android.support:design:25.0.1'
     compile 'com.android.support:cardview-v7:25.0.1'
     //horizontalCalendar
-    compile 'com.github.tibolte:agendacalendarview:1.0.4'
+    compile 'com.github.todou:calendarpager:1.0.0'
 }
